Archive2/e9/4c052b8a049750/output
main.cpp:27:5: error: static_assert failed ""
    static_assert(!has_no_duplicates<float, float>{}, "");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
